# pelita-clients

./: README.md
haskell/: PelitaClient.hs  README.md  client.sh  my-pelita-client.hs  package.yaml  pelita-client.hs  pelita-haskell.cabal  stack.yaml
haskell/app/: my-pelita-client.hs
haskell/src-lib/: PelitaClient.hs
julia/: README.md  pelita-client.jl
